Исправлено дублирование Исправлен getTrainingSessionsForDay (возвращает TreeMap), отредактированы тесты Исправлен getCountByCoaches (упрощена логика)